--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!-- MainActivity as the launcher activity -->.
+        <!-- MainActivity as the launcher activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
