--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!-- MainActivity as the launcher activity -->
+        <activity
+            android:name=".ludo_quiz"
+            android:exported="false" />
+        <activity
+            android:name=".ludo_game"
+            android:exported="false" /> <!-- MainActivity as the launcher activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -25,9 +30,6 @@
         <activity
             android:name=".quiz_game"
             android:exported="true" /> <!-- Fourth activity: OptionQuiz -->
-
-
-
         <activity
             android:name=".OptionQuiz"
             android:exported="true" /> <!-- Fifth activity: Exam -->
